--- a/src/sections/Experience.section.astro
+++ b/src/sections/Experience.section.astro
@@ -14,7 +14,7 @@ import TextAnim from "@/components/TextAnim.astro"
   class="xs:transition xs:duration-500 xs:opacity-0 flex flex-col justify-center"
 >
   <h2
-    class="font-black text-5xl sm:text-7xl md:text-8xl lg:text-9xl uppercase mb-10"
+    class="font-black text-5xl xs:text-6xl sm:text-7xl md:text-8xl lg:text-9xl uppercase mb-10"
   >
     <TextAnim trigger h="5.5rem">Experience</TextAnim>
   </h2>
