--- a/src/sections/ProjectsMobile.section.astro
+++ b/src/sections/ProjectsMobile.section.astro
@@ -5,9 +5,9 @@ import type { Project as ProyectInterface } from "@/interfaces/project.interface
 import projects from "@/data/projects.json"
 ---
 
-<Section class="xl:hidden h-auto p-0">
+<Section class="xl:hidden h-auto p-0 relative">
   <h2
-    class="text-5xl xs:text-6xl sm:text-7xl font-black uppercase mt-16 text-right pr-4"
+    class="absolute text-4xl xs:text-5xl sm:text-6xl font-black uppercase text-right right-4 top-12"
   >
     Projects
   </h2>
