--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,11 +1,10 @@
 ---
-import type { HTMLAttributes } from "astro/types"
+import type { HTMLAttributes } from 'astro/types'
 
-interface Props extends HTMLAttributes<"a"> {}
+interface Props extends HTMLAttributes<'a'> {}
 ---
 
 <a
-  {...Astro.props}
-  class="underline underline-offset-2"
-  ><slot /></a
+	class:list={['underline underline-offset-2', Astro.props.class]}
+	{...Astro.props}><slot /></a
 >
