--- a/src/sections/TechSkills.section.astro
+++ b/src/sections/TechSkills.section.astro
@@ -152,9 +152,9 @@ const stack = [...backend, ...frontend, ...devops]
   class="xs:transition-all xs:duration-500 xs:opacity-0 uppercase flex flex-col"
 >
   <h1
-    class="font-black text-4xl sm:text-5xl md:text-8xl mt-20 mb-10 md:mb-0 md:mt-32"
+    class="font-black text-5xl xs:text-6xl sm:text-7xl md:text-8xl mt-20 mb-10 md:mb-0 md:mt-32"
   >
-    <TextAnim trigger h="5.5rem">
+    <TextAnim trigger h="5rem">
       Tech<span class="text-stroke">Skills</span>
     </TextAnim>
   </h1>
