--- a/src/sections/More.section.astro
+++ b/src/sections/More.section.astro
@@ -1,8 +1,8 @@
 ---
-import { Download } from 'lucide'
+/* import { Download } from 'lucide' */
 import Section from '@/components/Section.astro'
-import LucideIcon from '@/components/LucideIcon.astro'
-import HeroLink from '@/components/HeroLink.astro'
+/* import LucideIcon from '@/components/LucideIcon.astro'
+import HeroLink from '@/components/HeroLink.astro' */
 import TextAnim from '@/components/TextAnim.astro'
 ---
 
